generation of QR code with branding and with integration to QR payment
